--- a/app/src/main/res/drawable/text_stroke.xml
+++ b/app/src/main/res/drawable/text_stroke.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <stroke android:width = "2dp" android:color="#FF948B8B">
+        <stroke android:width = "2dp" android:color="@color/light_blue">
             <solid android:color = "#FFFFFFFF"/>
         </stroke>
         </shape>
