--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,94 +5,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-    <include
-        android:id="@+id/included_viewpager"
-        layout="@layout/view_pager_layout" />
-    <!-- Include the GridView layout -->
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main_conLayout_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_searchFragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+    </FrameLayout>
 
-        <EditText
-            android:id="@+id/main_Edit_txt"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:hint="아이브"
-            android:background="@drawable/text_stroke"
-            android:layout_margin="10dp"
-            app:layout_constraintBottom_toBottomOf="@id/main_conLayout_1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/main_conLayout_1" />
+    <android.widget.Button
+        android:id="@+id/btn_searchFragment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="검색"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:background="@color/orange"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_SaveFragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="30dp"
-            android:background="@drawable/btn_search"
-            android:textColor="@color/white"
-            android:text="검색"
-            app:layout_constraintBottom_toBottomOf="@id/main_conLayout_1"
-            app:layout_constraintStart_toEndOf="@+id/main_Edit_txt"
-            app:layout_constraintTop_toTopOf="@id/main_conLayout_1" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!-- Your other views and layouts -->
-
-    <!-- Include the ViewPager layout -->
-
-
-    <include
-        android:id="@+id/included_gridview"
-        layout="@layout/grid_view_layout" />
-
-
-
-    <!-- Your other views and layouts -->
-    <LinearLayout
-        android:id="@+id/line3"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:orientation="horizontal"
+    <android.widget.Button
+        android:id="@+id/btn_SaveFragment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="보관함"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:background="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintStart_toEndOf="@+id/btn_searchFragment"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        />
 
-        <TextView
-            android:id="@+id/fragment_Btn1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:drawablePadding="-10dp"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:text="검색결과"
-            android:textStyle="bold"
-            app:drawableTopCompat="@drawable/icon_home" />
 
-        <TextView
-            android:id="@+id/fragment_Btn2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:drawablePadding="-10dp"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:text="보관함"
-            android:textStyle="bold"
-            app:drawableTopCompat="@drawable/icon_save" />
-    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
