feat 230922 마지막 최종

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -27,7 +27,9 @@
             android:hint="검색어를 입력해주세요."
             android:layout_centerVertical="true"
             android:layout_marginStart="20dp"
-            android:imeOptions="actionNext"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
             android:background="@drawable/text_stroke"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
